website/static/styles/form.css
@import url("color_palette.css");

body {
  position: relative;
  margin: 0;
  max-width: 100%;
  background-size: auto;
  background-attachment: fixed;
}

.sio-h1 {
  font-size: 4vi; 
  text-align: center;
}

.sio-container {
  padding-top:5pt;
}

.img-404 {
  width: 100%;
}

.sio-img {
  max-width: 30%; 
  height: auto;
}

.sio-form {
  padding-top: 10pt;
  width: 95%;
}

.grid-container {
  padding-top: 50pt;
  display: grid;
  grid-gap: 20px;
}

.grid-container-fr {
  padding-top: 50pt;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 20px;
}

.btn, #image {
  appearance: button;
  background-color: var(--primary-color);
  border: solid transparent;
  border-radius: 16px;
  border-width: 0 0 4px;
  box-sizing: border-box;
  color: var(--background-color);
  cursor: pointer;
  display: inline-block;
  font-family: din-round,sans-serif;
  font-size: 15px;
  font-weight: 700;
  letter-spacing: .8px;
  line-height: 20px;
  margin: 0;
  outline: none;
  overflow: visible;
  padding: 13px 16px;
  text-align: center;
  text-transform: uppercase;
  touch-action: manipulation;
  transform: translateZ(0);
  transition: filter .2s;
  user-select: none;
  -webkit-user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
}

.btn:after, #image:after {
  background-clip: padding-box;
  background-color: var(--primary-color);
  bottom: -4px;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: -1;
}

.btn:main, #image:main,
.btn:focus, #image:focus {
  user-select: auto;
}

.btn:hover:not(:disabled) {
  filter: brightness(0.9);
  -webkit-filter: brightness(0.9);
}

.btn:disabled {
  cursor: auto;
}

.btn:active, #image:active {
  border-width: 4px 0 0;
  background: none;
}

.slideshow-login {
  display: flex;
  justify-content: center; /* Center the image horizontally */
  align-items: center; /* Center the image vertically */
}

.slideshow-login img {
  width: 300pt; 
  height: auto;
  border-radius: 10%;
  box-shadow: 
      rgb(0, 255, 204) 4px 10px 0px -1px,
      rgb(255, 255, 204) 0px -2px 0px 2.3px;

  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;

  user-select: none;
  touch-action: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.slideshow-login img:hover {
  box-shadow: 
      rgb(0, 255, 204) 4px 10px 10px -1px,
      rgb(255, 255, 204) 0px -2px 5px 2.3px;
}

/*Shrinking for mobile*/
@media (max-width: 768px) {
  .sio-h1 {
      font-size: 4vi; 
      text-align: center;
  }

  .sio-form {
      padding-top: 30pt;
      width: 100%;
  }

  .grid-container-fr {
      padding: 0;
      display: block;    
  }

  .grid-container {
      padding-top: 0;   
  }

  .slideshow-login img {
      width: 180pt;
      height: auto;
  }
}
/*Style for reviews:*/
/* Stars in Displayed Reviews and Review Form */
.star {
  display: inline-block;
  width: 30px; /* Base size for stars */
  height: 30px; /* Base size for stars */
  background-size: cover;
}

.empty-star { background-image: url('../image/empty_star.jpg'); }
.filled-star { background-image: url('../image/full_star.jpg'); }

div.star-rating.form-stars label {
  display: inline-block;
  width: 64px; /* Adjust this width to ensure enough space for scaled stars */
  height: 50px; /* Optionally adjust height if needed */
  cursor: pointer; /* To show clickable cursor on hover */
}
/* Increased specificity for scaling stars in the review form */
div.star-rating.form-stars span.star {
  transform: scale(2.3);
  transform-origin: left;
}

/* Style for the star rating input field */
.star-rating input {
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  opacity: 0;
  display: inline-block;
  width: 20%; /* Each star represents 20% */
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 2;
  position: absolute;
  left: 0;
  top: 0;
}
.txtblock{
  color: black;
}
.submitBtn{ 
  font-size: 25px;
  color: black;
}

.div_for_picture_name_title{
  display: flex;
  align-items: center;
  margin-top: 50px;
}
.review_user_picture{
  width: 60px;
   height: 60px;
}
.review_usersName_title{
  margin-left: 2%;
}
/*End of Style for reviews.*/

